# oj-api-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml.example
.github/workflows/: ghcr.yml
openspec/changes/admin-i18n-and-problems-browse/: tasks.md
openspec/specs/admin-api/: spec.md
openspec/specs/admin-embedding-page/: spec.md
openspec/specs/admin-management/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/base-crawler/: spec.md
openspec/specs/config-example/: spec.md
openspec/specs/crawler-migration/: spec.md
openspec/specs/daily-challenge/: spec.md
scripts/: atcoder.py  codeforces.py  config.toml  diag.py  embedding_cli.py  leetcode.py  luogu.py  pyproject.toml  requirements.txt
scripts/embeddings/: __init__.py  generator.py  rewriter.py  searcher.py  storage.py
scripts/embeddings/providers/: __init__.py  base.py  factory.py  gemini.py  openai_compat.py
scripts/utils/: __init__.py  base_crawler.py  config.py  database.py  html_converter.py  logger.py
src/: config.rs  detect.rs  health.rs  main.rs  models.rs  utils.rs
src/admin/: handlers.rs  mod.rs  pages.rs
src/api/: daily.rs  error.rs  mod.rs  problems.rs  resolve.rs  similar.rs  status.rs
src/auth/: mod.rs
src/db/: daily.rs  embeddings.rs  mod.rs  problems.rs  settings.rs  tokens.rs
static/: admin.css  admin.js  i18n.js
static/i18n/: en.json  zh-CN.json  zh-TW.json
templates/: base.html
templates/admin/: crawlers.html  embeddings.html  index.html  login.html  problems.html  tokens.html
(+98 files in other folders)
