[package]
name = "oj-api-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
sqlite-vec = "0.1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
zerocopy = { version = "0.7", features = ["derive"] }
askama = "0.12"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
toml = "1"
